<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/vokti"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        app:civ_border_color="#1B0347"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="#0A1A88"
        android:fontFamily="@font/br"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="35dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/student"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/baseline_email_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView"
            android:layout_marginStart="10dp"
            style="@style/discription_text_style"
            android:text="@string/email"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_marginStart="10dp"
            style="@style/discription_text_style"
            android:text="@string/whatsapp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/discription_text_style"
            android:text="@string/website"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            style="@style/discription_text_style"
            android:text="@string/linkedin"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:background="#ff00"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/hire_me_tv_id"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contact_me"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:background="#1C4787"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/download_cv_tv_id"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/download_cv"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/contace_me_button"
        android:text="Contact Me"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"/>



</LinearLayout>